in consumer.GamesDaoImpl : newRecord, getGameById, updateGame ; in consumer.UserDaoImpl.getUserById : try to find the User instance in the CurrentModel before looking for it in database ; in business.PlayerManager : makeUserProposeGame, usersToPlayer, gamesToGameSummaries ; in model : two new classes Player and GameSummary to filter public information from the related classes User and Game ; in doGet of webapp.Home : new implementation to transmit to JSP all public information of CurrentModel to display the three lists when the JSP is loaded ; in webapp.UserActivities : new implementation to send all information of CurrentModel ; in home.jsp : firstly, new implementation to update the three lists via perodic calls to fetch, secondly, a button to create a new game to verify the previous modifications work well ; this consists of a post request with hidden field action equal to new_game so that the doPost method of Home understand a new game has to be created" ; in doPost of webapp.Home : some instruction to create a new game via the brand new services of business mentionned previously.