@@ -1,151 +1,124 @@
 package online.caltuli.batch.userInteractionSimulation.withWebGui;
 
-import com.sun.net.httpserver.HttpHandler;
 import com.sun.net.httpserver.HttpExchange;
-
-import java.io.*;
-import java.net.*;
-
-import javax.net.ssl.SSLContext;
-import javax.net.ssl.X509TrustManager;
-import javax.net.ssl.HttpsURLConnection;
-import javax.net.ssl.TrustManager;
+import com.sun.net.httpserver.HttpHandler;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
-/*
-The DummyUser_01 class is a straightforward HTTP client designed for testing
-purposes. It simulates the following user actions on the web application by
-making HTTP GET and POST requests:
-- Sends GET requests to access the home and registration pages.
-- Submits a POST request for registration using URL-encoded parameters, including a username, password, and other formal information.
-- Performs authentication via a POST request with the username and password.
-- Pauses execution for a while to simulate waiting or manual user interaction.
-- Initiates a GET request to log out of the application.
-*/
+import java.io.IOException;
+import java.io.OutputStream;
+import java.net.CookieManager;
+import java.net.URI;
+import java.net.URLEncoder;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.util.Arrays;
+import java.util.Optional;
+import java.util.UUID;
+
 public class DummyUser_01 implements HttpHandler {
 
-    private final Logger logger = LogManager.getLogger(DummyUser_01.class);
+    private static final Logger logger = LogManager.getLogger(DummyUser_01.class);
 
     private static final String DEFAULT_URL_PREFIX = "https://localhost:8443/webapp/";
-    private static final String ALTERNATE_URL_PREFIX = "https://caltuli.online/webapp/";
-    private static final String ALTERNATE_URL_PREFIX_02 = "https://caltuli.online/webapp_version_damien/";
-    private static final String ALTERNATE_URL_PREFIX_03 = "https://caltuli.online/webapp_version_samya/";
-    private static final String ALTERNATE_URL_PREFIX_04 = "https://caltuli.online/webapp_version_sylvain/";
-    private static final String USER_AGENT = "Mozilla/5.0";
-
     private String urlPrefix;
-    String user;
+    private String user;
 
-    DummyUser_01() {
-        String urlPrefix = DEFAULT_URL_PREFIX;
-        String user = "fake-user";
+    public DummyUser_01() {
+        this.urlPrefix = DEFAULT_URL_PREFIX;
+        this.user = "fake-user";
     }
 
-    DummyUser_01(String urlPrefix, String user) {
+    public DummyUser_01(String urlPrefix, String user) {
         this.urlPrefix = urlPrefix;
         this.user = user;
     }
 
     @Override
     public void handle(HttpExchange exchange) throws IOException {
+        exchange.getResponseHeaders().add("Access-Control-Allow-Origin", "*");
+        exchange.getResponseHeaders().add("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE, OPTIONS");
+        exchange.getResponseHeaders().add("Access-Control-Allow-Headers", "Content-Type, Authorization");
+        exchange.getResponseHeaders().add("Access-Control-Allow-Credentials", "true");
 
-        new Thread(new Runnable() {
-            @Override
-            public void run() {
-                try {
-                    CookieManager cookieManager = new CookieManager();
-                    CookieHandler.setDefault(cookieManager);
+        // Gérer la requête de pré-vérification (OPTIONS)
+        if ("OPTIONS".equals(exchange.getRequestMethod())) {
+            exchange.sendResponseHeaders(204, -1); // 204 No Content, -1 signifie que le corps de la réponse est vide
+            return;
+        }
 
-                    String response = sendGetRequest(urlPrefix + "home");
-                    sendGetRequest(urlPrefix + "registration");
-                    String registrationParams = "username=" + URLEncoder.encode(user, "UTF-8") +
-                            "&password=123&email=ai.ai@ai.com&message=I'm clever";
-                    sendPostRequest(urlPrefix + "registration", registrationParams);
+        String sessionId = UUID.randomUUID().toString(); // Génération d'un nouveau UUID
+        String cookieValue = "JSESSIONID=" + sessionId + "; Path=/; HttpOnly; Secure; SameSite=None";
+        exchange.getResponseHeaders().set("Set-Cookie", cookieValue);
 
-                    String authParams = "username=" + URLEncoder.encode(user, "UTF-8") + "&password=123";
-                    sendPostRequest(urlPrefix + "authentication", authParams);
+        new Thread(() -> {
+            try {
+                HttpClient client = createClient();
 
-                    try {
-                        Thread.sleep(10000);
-                    } catch (InterruptedException e) {
-                        Thread.currentThread().interrupt();
-                        System.out.println("Interruption durant l'attente.");
-                    }
+                sendGetRequest(client, urlPrefix + "home");
+                sendGetRequest(client, urlPrefix + "registration");
 
-                    sendGetRequest(urlPrefix + "logout");
+                String registrationParams = "username=" + URLEncoder.encode(user, "UTF-8") +
+                        "&password=123&email=ai.ai@ai.com&message=I'm clever";
+                sendPostRequest(client, urlPrefix + "registration", registrationParams);
 
-                    response = "Task terminated!";
-                    exchange.sendResponseHeaders(200, response.getBytes().length);
-                    try (OutputStream os = exchange.getResponseBody()) {
-                        os.write(response.getBytes());
-                    }
-                } catch (Exception e) {
-                    logger.info(e.getMessage());
-                    e.printStackTrace();
+                String authParams = "username=" + URLEncoder.encode(user, "UTF-8") + "&password=123";
+                sendPostRequest(client, urlPrefix + "authentication", authParams);
+
+                Thread.sleep(10000);
+
+                sendGetRequest(client, urlPrefix + "logout");
+
+                String response = "Task terminated!";
+                exchange.sendResponseHeaders(200, response.getBytes().length);
+                try (OutputStream os = exchange.getResponseBody()) {
+                    os.write(response.getBytes());
                 }
+            } catch (Exception e) {
+                logger.error("Error handling request: " + e.getMessage(), e);
+            } finally {
+                exchange.close();
             }
         }).start();
     }
 
-    private String sendGetRequest(String urlString) throws IOException {
-        URL url = new URL(urlString);
-        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-
-        connection.setRequestMethod("GET");
-        connection.setRequestProperty("User-Agent", USER_AGENT);
-
-        int responseCode = connection.getResponseCode();
-        System.out.println("GET Response Code :: " + responseCode);
-        if (responseCode == HttpURLConnection.HTTP_OK) { // success
-            try (BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
-                String inputLine;
-                StringBuilder response = new StringBuilder();
-
-                while ((inputLine = in.readLine()) != null) {
-                    response.append(inputLine);
-                }
-                System.out.println(response.toString());
-                return response.toString();
-            }
-        } else {
-            System.out.println("GET request not worked");
-            return "GET request not worked. Response Code: " + responseCode;
-        }
+    private HttpClient createClient() {
+        return HttpClient.newBuilder()
+                .cookieHandler(new CookieManager())
+                .build();
     }
 
-    private String sendPostRequest(String urlString, String postParams) throws IOException {
-        URL url = new URL(urlString);
-        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+    private String sendGetRequest(HttpClient client, String urlString) throws Exception {
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create(urlString))
+                .GET()
+                .build();
 
-        connection.setRequestMethod("POST");
-        connection.setRequestProperty("User-Agent", USER_AGENT);
-        connection.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
+        HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
 
-        connection.setDoOutput(true);
-        try (DataOutputStream wr = new DataOutputStream(connection.getOutputStream())) {
-            wr.writeBytes(postParams);
-            wr.flush();
-        }
+        Optional<String> jsessionId = response.headers().firstValue("Set-Cookie")
+                .map(cookie -> Arrays.stream(cookie.split(";"))
+                        .filter(c -> c.trim().startsWith("JSESSIONID="))
+                        .findFirst()
+                        .orElse(null));
 
-        int responseCode = connection.getResponseCode();
-        System.out.println("POST Response Code :: " + responseCode);
-        if (responseCode == HttpURLConnection.HTTP_OK) {
-            try (BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
-                String inputLine;
-                StringBuilder response = new StringBuilder();
+        Thread.sleep(10000);
 
-                while ((inputLine = in.readLine()) != null) {
-                    response.append(inputLine);
-                }
-                System.out.println(response.toString());
-                return response.toString();
-            }
-        } else {
-            System.out.println("POST request not worked");
-            return "POST request not worked. Response Code: " + responseCode;
-        }
+        jsessionId.ifPresent(jsid -> logger.info("JSESSIONID: " + jsid.substring("JSESSIONID=".length())));
+
+        return response.body();
+    }
+
+    private String sendPostRequest(HttpClient client, String urlString, String postParams) throws Exception {
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create(urlString))
+                .header("Content-Type", "application/x-www-form-urlencoded")
+                .POST(HttpRequest.BodyPublishers.ofString(postParams))
+                .build();
+
+        HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+        return response.body();
     }
 }
-
